<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculadora">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculadora"
            android:textSize="30sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario"
            android:textSize="25sp"
            android:textAlignment="center"
            android:id="@+id/lblUser"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num1"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:id="@+id/txtNum1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10sp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num2"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:textSize="20sp"
                android:id="@+id/txtNum2"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textSize="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:id="@+id/lblResultado"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10sp">
            <Button
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:background="@color/black"
                android:text="@string/mas"
                android:textSize="20sp"
                android:id="@+id/btnMas"/>
            <Button
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:background="@color/black"
                android:text="@string/menos"
                android:textSize="20sp"
                android:id="@+id/btnMenos"/>
            <Button
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10sp"
                android:background="@color/black"
                android:text="@string/por"
                android:textSize="20sp"
                android:id="@+id/btnPor"/>
            <Button
                android:layout_width="70sp"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/entre"
                android:textSize="20sp"
                android:id="@+id/btnEntre"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="260sp"
            android:text="@string/limpiar"
            android:textSize="20sp"
            android:id="@+id/btnLimpiar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regresar"
            android:textSize="20sp"
            android:id="@+id/btnRegresar"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>