<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginRetangulo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="@string/nombre"
            android:textAlignment="center"
            android:textSize="25sp"/>
        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:layout_marginTop="10sp"
            android:id="@+id/txtNombre"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400sp"
            android:text="@string/entrar"
            android:textSize="20sp"
            android:id="@+id/btnEntrar"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:text="@string/salir"
            android:textSize="20sp"
            android:id="@+id/btnSalir"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>